0.2.8 (?/??/2012):
------------------

- Fixed a bug that caused rEFInd to fail to scan for drivers if the
  filesystem driver didn't set a volume name (that is, if the relevant
  field was set to NULL rather than even an empty string). In such
  situations, rEFInd now reports the volume name as "Unknown".

0.2.7 (4/19/2012):
------------------

- After much trial and tribulation, I've overcome a GNU-EFI limitation and
  enabled rEFInd to load EFI drivers. This feature was present in the
  original build of rEFIt but was removed in the versions that could
  compile under Linux, but now it's back -- and still being compiled under
  Linux! To use it, you should place your drivers in a convenient directory
  on the ESP (or whatever partition you use to launch rEFInd) and add a
  "scan_driver_dirs" entry to refind.conf to tell rEFInd where to look. (As
  always, you should specify the driver directory relative to the root of
  the filesystem.) Note that you can't launch drivers from another
  filesystem; they must be on the same volume that holds rEFInd. Those who
  compile from source code should note that implementing this feature
  necessitated using a more recent version of the GNU-EFI library. I'm
  currently using version 3.0p, and version 3.0i does NOT work. I don't
  know where the change occurred, but you may need to upgrade your GNU-EFI
  installation.

- Fixed bug that caused rEFInd to show up in its own menu sometimes.

- Added new refind.conf token: also_scan_dirs. When scanning volumes for
  EFI boot loaders, rEFInd always scans the root directory and every
  subdirectory of the /EFI directory, but it doesn't recurse into these
  directories. The also_scan_dirs token adds more directories to the scan
  list. It defaults to "elilo,boot", but you can set it to any directory or
  directories you like.

0.2.6 (4/14/2012):
------------------

- Added "volume" keyword to configuration file's stanza options. This