@@ -93,6 +93,22 @@ timeout 20
 #
 #also_scan_dirs boot,EFI/linux/kernels
 
+# Scan for Linux kernels that lack a ".efi" filename extension. This is
+# useful for better integration with Linux distributions that provide
+# kernels with EFI stub loaders but that don't give those kernels filenames
+# that end in ".efi", particularly if the kernels are stored on a
+# filesystem that the EFI can read. When uncommented, this option causes
+# all files in scanned directories with names that begin with "vmlinuz"
+# or "bzImage" to be included as loaders, even if they lack ".efi"
+# extensions. The drawback to this option is that it can pick up kernels
+# that lack EFI stub loader support and other files. Most notably, if you
+# want to give a kernel a custom icon by placing an icon with the kernel's
+# filename but a ".icns" extension in the same directory as the kernel, this
+# option will cause the icon file to show up as a non-functional loader tag.
+# Default is to NOT scan for kernels without ".efi" extensions.
+#
+#scan_all_linux_kernels
+
 # Set the maximum number of tags that can be displayed on the screen at
 # any time. If more loaders are discovered than this value, rEFInd shows
 # a subset in a scrolling list. If this value is set too high for the
