@@ -152,6 +152,7 @@ typedef struct {
 
 typedef struct {
    BOOLEAN     TextOnly;
+   BOOLEAN     ScanAllLinux;
    UINTN       Timeout;
    UINTN       HideUIFlags;
    UINTN       MaxTags;     // max. number of OS entries to show simultaneously in graphics mode
